--- a/form.html
+++ b/form.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>k8 Page</title>
+    <title>FastAPI Form</title>
 </head>
-<body bgcolor="Blue">
-    <h1>Hello k8 Project class</h1>
+<body>
+    <h1>FastAPI Form</h1>
+    <form action="/submit_form" method="post">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name"><br>
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email"><br><br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
+
